// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Notice test show notice else else, if localStorage version !== current version show version upgrade notice 1`] = `
<div
  className="header-item"
>
  <article
    className="wonder-modal"
  >
    <div
      className="modal-item"
    >
      <div
        className="modal-item-header"
      >
        Version Upgrade
        <img
          onClick={[Function]}
          src="./public/img/close.png"
        />
      </div>
      <div
        className="modal-item-content"
      >
        <div
          className="content-text"
        >
          已为您升级为1.0.0-rc.1版本。
        </div>
        <div
          className="content-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://www.wonder-3d.com/"
            target="view_window"
          >
            官方网站
          </a>
        </div>
        <div
          className="content-small-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://forum.wonder-3d.com/"
            target="view_window"
          >
            论坛
          </a>
        </div>
        <div
          className="content-small-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://www.wonder-3d.com/docs/docs/doc1-1/"
            target="view_window"
          >
            文档
          </a>
        </div>
        <div
          className="content-small-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://github.com/Wonder-Technology"
            target="view_window"
          >
            Github
          </a>
        </div>
      </div>
      <div
        className="modal-item-footer"
      >
        <button
          className="footer-submit"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </article>
</div>
`;

exports[`Header Notice test show notice else if localStorage have no version key show version upgrade notice 1`] = `
<div
  className="header-item"
>
  <article
    className="wonder-modal"
  >
    <div
      className="modal-item"
    >
      <div
        className="modal-item-header"
      >
        Version Upgrade
        <img
          onClick={[Function]}
          src="./public/img/close.png"
        />
      </div>
      <div
        className="modal-item-content"
      >
        <div
          className="content-text"
        >
          已为您升级为1.0.0-rc.1版本。
        </div>
        <div
          className="content-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://www.wonder-3d.com/"
            target="view_window"
          >
            官方网站
          </a>
        </div>
        <div
          className="content-small-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://forum.wonder-3d.com/"
            target="view_window"
          >
            论坛
          </a>
        </div>
        <div
          className="content-small-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://www.wonder-3d.com/docs/docs/doc1-1/"
            target="view_window"
          >
            文档
          </a>
        </div>
        <div
          className="content-small-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://github.com/Wonder-Technology"
            target="view_window"
          >
            Github
          </a>
        </div>
      </div>
      <div
        className="modal-item-footer"
      >
        <button
          className="footer-submit"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </article>
</div>
`;

exports[`Header Notice test show notice if localStorage have no welcomeUser key show welcome user notice, should not show version upgrade notice 1`] = `
<div
  className="header-item"
>
  <article
    className="wonder-modal"
  >
    <div
      className="modal-item"
    >
      <div
        className="modal-item-header"
      >
        Welcome to Wonder
        <img
          onClick={[Function]}
          src="./public/img/close.png"
        />
      </div>
      <div
        className="modal-item-content"
      >
        <div
          className="content-text"
        >
          欢迎使用Wonder编辑器，我们为您服务～
        </div>
        <div
          className="content-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://www.wonder-3d.com/"
            target="view_window"
          >
            官方网站
          </a>
        </div>
        <div
          className="content-small-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://forum.wonder-3d.com/"
            target="view_window"
          >
            论坛
          </a>
        </div>
        <div
          className="content-small-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://www.wonder-3d.com/docs/docs/doc1-1/"
            target="view_window"
          >
            文档
          </a>
        </div>
        <div
          className="content-small-white"
        />
        <div
          className="content-text"
        >
          <a
            href="https://github.com/Wonder-Technology"
            target="view_window"
          >
            Github
          </a>
        </div>
      </div>
      <div
        className="modal-item-footer"
      >
        <button
          className="footer-submit"
          onClick={[Function]}
        >
          OK
        </button>
      </div>
    </div>
  </article>
</div>
`;
